fix mg-nav wrap whitespace

--- a/src/scss/extensions/mg-nav.scss
+++ b/src/scss/extensions/mg-nav.scss
@@ -11,6 +11,7 @@
 }
 
 .mg-nav ul>li {
+  white-space: nowrap;
   list-style-type: none;
   margin: 0;
   display: flex;
